--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.1.0",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.1",
     "react-notifications": "^1.7.3",
     "sass": "^1.32.12",
