--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "next": "^12.1.0",
+    "rc-slider": "^10.0.0-alpha.4",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^2.1.2",
