--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@storyblok/storyblok-editable": "github:storyblok/storyblok-editable",
     "@terra-money/terra.js": "^3.0.2",
     "@terra-money/wallet-provider": "^3.6.5",
     "axios": "^0.26.0",
@@ -27,6 +28,8 @@
     "react-notifications": "^1.7.3",
     "react-toastify": "^8.2.0",
     "sass": "^1.32.12",
+    "storyblok-js-client": "^4.2.1",
+    "storyblok-rich-text-react-renderer": "^2.5.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
