--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bignumber.js": "^9.0.1",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "mixpanel-browser": "^2.45.0",
     "next": "^12.1.0",
     "rc-slider": "^10.0.0-alpha.4",
     "react": "17.0.1",
