--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "babel-plugin-styled-components": "^1.12.0",
     "bignumber.js": "^9.0.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "mixpanel-browser": "^2.45.0",
     "next": "^12.1.0",
     "rc-slider": "^10.0.0-alpha.4",
     "react": "17.0.1",
+    "react-chartjs-2": "^4.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.1",
+    "react-donut": "^1.1.4",
     "react-notifications": "^1.7.3",
     "react-toastify": "^8.2.0",
     "sass": "^1.32.12",
