--- a/sentry.properties
+++ b/sentry.properties
@@ -1,3 +1,4 @@
+auth.dsn=https://816f8a598cb2487e92e9a7de08140dc7@o1200162.ingest.sentry.io/6326667
 defaults.url=https://sentry.io/
 defaults.org=volume-x3
 defaults.project=nodejs
