add apy values to env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 STORYBLOK_ACCESS_TOKEN=
+
+# Vault Addresses
 LIQUIDITY_CONTRACT=
+KUJIRA_AUST_VAULT=
+
+# Vault APY
+LIQUIDITY_APY=
+KUJIRA_AUST_APY=
