--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "react-notifications": "^1.7.3",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
